// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Routes routes to / correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <b>
      Loading...
    </b>
  </div>
</div>
`;

exports[`Routes routes to /add-group correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div
      class="sc-bdvvaa hMSAon"
    >
      <h1>
        Add Group
      </h1>
      <form
        class="sc-gsDJrp idIFaR"
      >
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="nameLabel"
          >
            Name
          </label>
          <input
            aria-labelledby="nameLabel"
            class="form-control form-control-lg"
            id="name"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="descriptionLabel"
          >
            Description
          </label>
          <input
            aria-labelledby="descriptionLabel"
            class="form-control form-control-lg"
            id="description"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          disabled=""
          type="submit"
        >
          Add Group
        </button>
      </form>
      <div
        class="sc-dkPtyc cWQCqc"
      />
    </div>
  </div>
</div>
`;

exports[`Routes routes to /add-topic correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Routes routes to /groups correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Routes routes to /login correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div
      class="sc-bdvvaa hMSAon"
    >
      <h1>
        Login
      </h1>
      <form
        class="sc-gsDJrp idIFaR"
      >
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="emailLabel"
          >
            Email
          </label>
          <input
            aria-labelledby="emailLabel"
            class="form-control form-control-lg"
            id="email"
            placeholder="email"
            type="email"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="passwordLabel"
          >
            Password
          </label>
          <input
            aria-labelledby="passwordLabel"
            class="form-control form-control-lg"
            id="password"
            placeholder="password"
            type="password"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          disabled=""
          type="submit"
        >
          Log In
        </button>
      </form>
      <div
        class="sc-dkPtyc cWQCqc"
      />
    </div>
  </div>
</div>
`;

exports[`Routes routes to /signup correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div
      class="sc-bdvvaa hMSAon"
    >
      <h1>
        Sign Up
      </h1>
      <form
        class="sc-gsDJrp idIFaR"
      >
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="emailLabel"
          >
            Email
          </label>
          <input
            aria-labelledby="emailLabel"
            class="form-control form-control-lg"
            id="email"
            placeholder="email"
            type="email"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="nameLabel"
          >
            Name
          </label>
          <input
            aria-labelledby="nameLabel"
            class="form-control form-control-lg"
            id="name"
            placeholder="name"
            value=""
          />
        </div>
        <div
          class="form-group"
        >
          <label
            class="form-label"
            id="passwordLabel"
          >
            Password
          </label>
          <input
            aria-labelledby="passwordLabel"
            class="form-control form-control-lg"
            id="password"
            placeholder="password"
            type="password"
            value=""
          />
        </div>
        <button
          class="btn btn-primary"
          disabled=""
          type="submit"
        >
          Sign Up
        </button>
      </form>
      <div
        class="sc-dkPtyc cWQCqc"
      />
    </div>
  </div>
</div>
`;

exports[`Routes routes to /topics correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Routes routes to /user-profile correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <b>
      Loading...
    </b>
  </div>
</div>
`;

exports[`Routes routes to not found correctly 1`] = `
<div>
  <div
    class="sc-eCImvq eFmfDu"
  >
    Top 5 Daily
  </div>
  <div
    class="sc-iCfLBT kRgVyw"
  >
    <div
      class="sc-furvIG"
    >
      <a
        href="/login"
      >
        Log in
      </a>
       | 
      <a
        href="/signup"
      >
        Sign up
      </a>
    </div>
    <div
      class="sc-pVTma"
    />
  </div>
  <div
    class="sc-gKckTs ldzOLX"
  >
    <h1>
      404: Not Found
    </h1>
  </div>
</div>
`;
